--- a/build
+++ b/build
@@ -6,7 +6,9 @@ mkdir -p out
 cp main.bib out/
 cp main.tex out/
 cd out
-pdflatex -halt-on-error main.tex
-bibtex main
-pdflatex -halt-on-error main.tex # 2>&1 > /dev/null
-pdflatex -halt-on-error main.tex # 2>&1 > /dev/null
+# pdflatex -halt-on-error main.tex
+# bibtex main
+# pdflatex -halt-on-error main.tex # 2>&1 > /dev/null
+# pdflatex -halt-on-error main.tex # 2>&1 > /dev/null
+latexmk -halt-on-error -pdf main.tex
+
