Make it work with extrasymbol.sty

--- a/build
+++ b/build
@@ -5,11 +5,12 @@ set -e
 mkdir -p out
 cp main.bib out/
 cp main.tex out/
+cp extrasymbol.sty out/
 cp MSC_AuthorMacro/msc.cls MSC_AuthorMacro/msclike.bst MSC_AuthorMacro/cup_logo.eps out/
 cd out
-pdflatex -halt-on-error main.tex
+# pdflatex -halt-on-error main.tex
 # bibtex main
-# pdflatex -halt-on-error main.tex # 2>&1 > /dev/null
-# pdflatex -halt-on-error main.tex # 2>&1 > /dev/null
-# latexmk -halt-on-error -pdf main.tex
+# pdflatex -halt-on-error main.tex
+# pdflatex -halt-on-error main.tex
+latexmk -halt-on-error -pdf main.tex
 
